--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
  {   
     "version": 2,
     "builds": [
-      { "src": "./index.js", "use": "@vercel/node" },
-      { "src": "public/common", "use": "@vercel/static" },
-      { "src": "public/assets", "use": "@vercel/static" }
+      { "src": "./index.js", "use": "@vercel/node" }
     ],
     "routes": [
         { "src": "/.*", "dest": "/" }
