--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ejs"
+    "start": "nodemon index.js",
+    "build": "node index.js",
+    "deploy": "gcloud builds submit --config cloudbuild.json ."
   },
   "author": "epolis",
   "license": "ISC",
