--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "node index.js",
+    "build": "echo 'Build step completed.'",
     "deploy": "gcloud builds submit --config cloudbuild.json ."
   },
   "author": "epolis",
